--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>1.13.2</version>
         </dependency>
         <dependency>
+            <groupId>org.typelevel</groupId>
+            <artifactId>cats-core_2.13</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-graph</groupId>
             <artifactId>graph-dot_2.13</artifactId>
             <version>1.13.0</version>
